[package]
name = "rocket"
version = "1.0.0"
authors = ["Adolfo Ochagavía <aochagavia92@gmail.com>"]
build = "build.rs"

[dependencies]
clippy = { version = "0.0.118", optional = true }
itertools-num = "0.1.1"
rand = "0.3.14"
ggez = { git = "https://github.com/ggez/ggez.git", branch = "devel" }
structopt = "0.2.13"

[features]
default = []
debug = []
