[package]
name = "rocket"
version = "1.0.0"
authors = ["Adolfo Ochagavía <aochagavia92@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
itertools-num = "0.1.3"
rand = "0.6.1"
ggez = "0.4.4"
structopt = "0.2.14"
specs = "0.14.1"
geometry = { path = "geometry" }
geometry-derive = { path = "geometry-derive" }

[workspace]
members = [
    "geometry",
    "geometry-derive"
]
